--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/node": "^17.0.18",
+    "@types/react": "^17.0.39",
     "eslint-config-google": "^0.14.0",
     "eslint-config-next": "12.1.0",
-    "eslint-plugin-react": "^7.28.0"
+    "eslint-plugin-react": "^7.28.0",
+    "typescript": "^4.5.5"
   }
 }
